<resources>
    <string name="app_name">Word Zilla</string>
    <string name="congrats_txt">Congrats… You guessed right!</string>
    <string name="fail_txt">Better luck next time.</string>
    <string name="next_btn_txt">New Game</string>
    <string name="reset_btn_txt">Reset</string>
    <string name="play_btn_txt">Play</string>
    <string name="help_btn_txt">Instructions</string>
    <string name="settings_btn_txt">Settings</string>
    <string name="quit_btn_txt">Quit</string>
    <string name="best_txt">Best</string>
    <string name="score_txt">Score</string>
    <string name="back_btn_txt">Back</string>
    <string name="dyn_txt">0</string>
    <string name="company_txt">© 2024 WarClips, LLC</string>
    <string name="how_to_play">How to Play</string>
    <string name="guess_a_word_heading">Guess a Word</string>
    <string name="guess_a_word_body">Start by guessing a five-letter word. Type your guess into the input field provided.</string>
    <string name="receive_feedback_heading">Receive Feedback</string>
    <string name="receive_feedback_body">After submitting your guess, the game will provide feedback. Correct letters in the correct position are marked green, correct letters in the wrong position are marked yellow, and letters that are not in the word at all are marked red.</string>
    <string name="deduce_heading">Use Feedback to Deduce</string>
    <string name="deduce_body">Use the feedback from your previous guesses to narrow down the possibilities. Adjust your subsequent guesses based on the information provided until you correctly guess the five-letter word or exhaust all six attempts.</string>
    <string name="enjoy">Enjoy!</string>
    <string name="settings">Settings</string>
    <string name="sound_effects">Sound Effects</string>
</resources>