<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".InstructionsActivity">

    <TextView
        android:id="@+id/how_to_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/how_to_play"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:textSize="32sp" />


    <TextView
        android:id="@+id/guess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_a_word_heading"
        android:layout_below="@id/how_to_play"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/guess_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guess_a_word_body"
        android:layout_below="@id/guess"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/feedback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_feedback_heading"
        android:layout_below="@id/guess_body"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/feedback_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receive_feedback_body"
        android:layout_below="@id/feedback"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/deduce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deduce_heading"
        android:layout_below="@id/feedback_body"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/deduce_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deduce_body"
        android:layout_below="@id/deduce"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textAlignment="center"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/good_luck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enjoy"
        android:layout_below="@id/deduce_body"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textSize="20sp"
        android:layout_marginTop="32dp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/help_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:layout_below="@id/good_luck"
        android:layout_marginTop="64dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/back_btn_txt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary"
        android:textSize="20sp" />

</RelativeLayout>