<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".MainMenuActivity">

    <LinearLayout
        android:id="@+id/main_menu_header"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="50dp"
        android:layout_marginStart="128dp"
        android:layout_marginEnd="128dp"
        android:layout_marginTop="64dp"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/app_name_txt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="0dp"
            android:text="@string/app_name"
            android:textColor="@color/accent"
            android:textStyle="bold"
            android:layout_weight="1"
            android:textSize="32sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/main_menu_container"
        android:layout_width="256dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_menu_header"
        android:layout_centerInParent="true"
        android:layout_marginTop="256dp"
        android:layout_marginStart="96dp"
        android:layout_marginEnd="96dp"
        android:layout_marginBottom="256dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/play_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/play_btn_txt"
            android:textColor="@color/primary"
            android:textSize="20sp"/>

        <Button
            android:id="@+id/help_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/help_btn_txt"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/settings_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/settings_btn_txt"
            android:textColor="@color/primary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/quit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/accent"
            android:paddingStart="32dp"
            android:paddingEnd="32dp"
            android:text="@string/quit_btn_txt"
            android:textColor="@color/primary"
            android:textSize="20sp" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_txt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textSize="12sp"
        android:layout_below="@id/main_menu_container"/>

</RelativeLayout>