<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".SettingsActivity">

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/settings"
        android:layout_centerHorizontal="true"
        android:textColor="@color/accent"
        android:textStyle="bold"
        android:textSize="32sp" />

    <Switch
        android:id="@+id/sound_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settings"
        android:text="@string/sound_effects"
        android:textColor="@color/accent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        />

    <Button
        android:id="@+id/settings_back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/accent"
        android:layout_below="@id/sound_switch"
        android:layout_marginTop="512dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:text="@string/back_btn_txt"
        android:layout_centerHorizontal="true"
        android:textColor="@color/primary"
        android:textSize="20sp" />


</RelativeLayout>